5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1956/executions/1573_1326.log
== SUBMITION (2019-04-04 15:38:34) 
-- CODE:
print(40-x=35)
print(x=40-35)
-- EXECUTION TIME:
0.20031
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print(40-x=35)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:39:32) 
-- CODE:
print(x=40+35)

-- EXECUTION TIME:
0.173456
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    print(x=40+35)
TypeError: 'x' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:39:34) 
-- CODE:
print(x=40+35)

-- EXECUTION TIME:
0.15483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    print(x=40+35)
TypeError: 'x' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:39:36) 
-- CODE:
print(x=40+35)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(x=40+35)
TypeError: 'x' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:39:40) 
-- CODE:
print(x=40+35)

-- EXECUTION TIME:
0.145322
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    print(x=40+35)
TypeError: 'x' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:43:39) 
-- CODE:
x=40-35
print("x:",x)

-- EXECUTION TIME:
0.136529
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
x: 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:48:48) 
-- CODE:
x=40-35
print(x)

-- EXECUTION TIME:
0.195365
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:49:39) 
-- CODE:
x=40+35
print(x)

-- EXECUTION TIME:
0.154645
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
